fixes visibility problem and adds fade-in

--- a/app/assets/stylesheets/partials/_github-ribbon.sass
+++ b/app/assets/stylesheets/partials/_github-ribbon.sass
@@ -50,10 +50,21 @@
 
 @media (max-width:1231px)
   .wrapper
-    opacity: 0
-    -webkit-transition: opacity .1s ease-in
-    -moz-transition: opacity .1s ease-in
-    -ms-transition: opacity .1s ease-in
-    -o-transition: opacity .1s ease-in
-    transition: opacity .1s ease-in
+    visibility: hidden
+    opacity:  0
+    -webkit-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    -moz-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    -ms-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    -o-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+
+@media (min-width:1232px) and (max-width: 1270px)
+  .wrapper
+    visibility: visible
+    opacity:  1
+    -webkit-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    -moz-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    -ms-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    -o-transition: visibility 0s linear 0.2s,  opacity 0.2s linear
+    transition: opacity 0.2s linear
     
